crates/fossil-graph/tests/snapshots/schemas__answer_with_communities_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (graphrag::AnswerWithCommunitiesParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: AnswerWithCommunitiesParams
type: object
required:
  - question
properties:
  max_communities:
    description: "Cap on how many cluster summaries the LLM may pull as context. The Microsoft `GraphRAG` paper recommends 5–10; defaulting low to match."
    default: 8
    type: integer
    format: uint8
    minimum: 0
  question:
    type: string
additionalProperties: false
