crates/fossil-graph/tests/snapshots/schemas__answer_with_communities_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (graphrag::AnswerWithCommunitiesResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: AnswerWithCommunitiesResult
type: object
required:
  - answer
  - cited_clusters
properties:
  answer:
    type: string
  cited_clusters:
    description: "Clusters the answer was derived from. The binding renders these as \"sources\" / citations."
    type: array
    items:
      type: integer
      format: uint32
      minimum: 0
