crates/fossil-graph/tests/snapshots/schemas__describe_field_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (schema::DescribeFieldParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: DescribeFieldParams
type: object
required:
  - field
  - vertex_type
properties:
  field:
    type: string
  vertex_type:
    type: string
additionalProperties: false
