crates/fossil-graph/tests/snapshots/schemas__describe_field_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (schema::DescribeFieldResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: DescribeFieldResult
type: object
required:
  - datatype
  - role
  - samples
properties:
  datatype:
    type: string
  distinct:
    description: Distinct value count when known from manifest stats.
    type:
      - integer
      - "null"
    format: uint64
    minimum: 0
  role:
    description: "Inferred role for chart-axis defaults: `identifier`, `dimension`, `measure`. Mirrors keasy `lib/graph-schema.ts::inferRole` — promoted here to be authoritative."
    allOf:
      - $ref: "#/definitions/FieldRole"
  samples:
    description: Up to 8 sample values surfaced by the writer.
    type: array
    items:
      type: string
definitions:
  FieldRole:
    type: string
    enum:
      - identifier
      - dimension
      - measure
