crates/fossil-graph/tests/snapshots/schemas__describe_vertex_type_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (schema::DescribeVertexTypeParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: DescribeVertexTypeParams
type: object
required:
  - vertex_type
properties:
  vertex_type:
    type: string
additionalProperties: false
