crates/fossil-graph/tests/snapshots/schemas__execute_sql_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (sql::ExecuteSqlParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: ExecuteSqlParams
type: object
required:
  - sql
properties:
  row_cap:
    description: "Hard cap on rows returned to the caller. The executor MUST apply an outer `LIMIT` regardless of what the user's SQL contains."
    default: 10000
    type: integer
    format: uint32
    minimum: 0
  sql:
    type: string
  timeout_ms:
    description: "Hard cap on wall-clock execution time, milliseconds."
    default: 10000
    type: integer
    format: uint32
    minimum: 0
additionalProperties: false
